# betamax

./: .clippy.toml  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .mise.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  build.rs  deny.toml  docs.tape  justfile  package-lock.json  package.json  pnpm-lock.yaml  release-plz.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release-plz.yml
.mise/tasks/: build-release
assets/: index.html
crates/betamax/: Cargo.toml  README.md  build.rs
crates/betamax-core/: Cargo.toml  README.md  THIRD_PARTY.md  build.rs
crates/betamax-core/resources/ghostty/themes/: Betamax Brownout
crates/betamax-core/src/: error.rs  key.rs  lib.rs  media.rs  output.rs  shell.rs  trace.rs  wait.rs
crates/betamax-core/src/ghostty/: color.rs  engine.rs  mod.rs  render_theme.rs  renderer.rs  state.rs  target.rs  theme.rs
crates/betamax-core/src/runner/: artifacts.rs  capture.rs  mod.rs  options.rs  pty.rs  requirements.rs  settings.rs
crates/betamax-core/src/tape/: mod.rs  model.rs  parser.rs
crates/betamax-core/tests/: public_api.rs
crates/betamax/src/: main.rs
crates/betamax/src/commands/: list_themes.rs  mod.rs  new.rs  new.tape  run.rs  validate.rs
docs/: README.md  development.md  roadmap.md  state-json.md  tape-reference.md  terminal-testing.md  vhs-differences.md
examples/: basic.tape  captions.tape  clipboard-env.tape  hide-show.tape  keyboard-overlay-bottom-left.tape  keyboard-overlay-top-left.tape  keyboard-overlay-top-right.tape  keyboard-overlay.tape  keys.tape  layout.tape  outputs.tape  presentation-overlays.tape  quick-start.tape  screenshot.tape  scrollback.tape  text-styles.tape  themes.tape  video.tape  waits.tape
scripts/: package-binstall-archive.sh  render-examples.sh  upload-readme-assets.sh
site/: astro.config.mjs  quick-start.tape
site/src/: starlightRouteData.ts
site/src/content/docs/: examples.mdx  index.mdx  overview.mdx  quick-start.mdx
site/src/content/docs/authoring/: generated-media.mdx  input-and-keys.mdx  outputs.mdx  presentation-overlays.mdx  tape-files.mdx  themes.mdx
site/src/content/docs/reference/: development.mdx  roadmap.mdx  tape-reference.mdx  vhs-differences.mdx
site/src/content/docs/testing/: state-json.mdx  terminal-testing.mdx
site/src/styles/: custom.css
src/: cli.rs  main.rs
src/cli/: list_themes.rs  new.rs  new.tape  run.rs  themes.json
