[package]
name = "betamax"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-stdin = "0.4.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"

[build-dependencies]
anyhow = "1.0.82"
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "rustc",
    "si",
    "gitcl",
] }

[lints.rust]
unused = "allow"
