[package]
name = "betamax"
description = "Rust-first VHS-style terminal capture CLI"
version = "0.1.14"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
build = "build.rs"
keywords = ["terminal", "capture", "gif", "cli", "vhs"]
categories = ["command-line-utilities", "development-tools::testing", "multimedia"]
include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "src/**/*.rs",
    "src/commands/new.tape",
]

[[bin]]
name = "betamax"
path = "src/main.rs"

[dependencies]
betamax-core.workspace = true
clap.workspace = true
clap-stdin.workspace = true
glob.workspace = true
indicatif.workspace = true
interpolator.workspace = true
libghostty-vt.workspace = true
log.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[lints]
workspace = true
